# autopoe

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  autopoe.spec  main.py  pyproject.toml  synode.spec
.github/workflows/: ci.yml  release.yml
app/: agent.py  cli.py  config.py  events.py  git.py  logging.py  main.py  models.py  permissions.py  prompts.py  registry.py  router.py  sandbox.py  settings.py
app/models/: __init__.py  agent.py  base.py  delta.py  event.py  history.py  llm.py  message.py  todo.py
app/prompts/: __init__.py  steward.py  supervisor.py  worker.py
app/providers/: __init__.py  anthropic.py  dynamic.py  gateway.py  gemini.py  ollama.py  openai.py  openrouter.py  registry.py  thinking.py
app/routes/: __init__.py  agents.py  meta.py  providers_route.py  settings.py  steward.py  ws.py
app/tools/: __init__.py  agent_mgmt.py  agents.py  delete.py  edit.py  exec.py  exit.py  fetch.py  filesystem.py  git_tools.py  idle.py  memory.py  merge.py  messaging.py  path_access.py  read.py  send.py  spawn.py  system.py  testing.py  todo.py  write.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AgentGraph.tsx  AgentGraphNode.tsx  AgentTree.tsx  AgentWindow.tsx  ContextMenu.tsx  EventItem.tsx  EventLog.tsx  HistoryView.tsx  PathAccessDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  StewardPanel.tsx
frontend/src/context/: AgentContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAgentDetail.ts  useAgents.ts  (+1 more)
tests/: test_fastapi_basic.py
(+12 files in other folders)
